Update README with comprehensive project details and setup instructions.